--- a/FE_Q/favorsdetail.html
+++ b/FE_Q/favorsdetail.html
@@ -7,7 +7,7 @@
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/reviewdetailstyle.css">
+    <link rel="stylesheet" href="assets/css/favordetailstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -174,13 +174,13 @@
                                     </li>
                                     <li class="ot-item">/</li>
                                     <li class="ot-item">
-                                        <a href="director.html">Bình luận phim</a>
+                                        <a href="director.html">Ưu đãi</a>
                                     </li>
                                     <li class="ot-item">/</li>
-                                    <li class="name">[Review] Your Name: Anime ăn khách nhất mọi thời đại</li>
+                                    <li class="name">Giá vé U22 - Chỉ từ 45k</li>
                                 </ul>
                             </div>
-                            <div class="row title">[Review] Your Name: Anime ăn khách nhất mọi thời đại</div>
+                            <div class="row title">Giá vé U22 - Chỉ từ 45k</div>
                             <div class="row mv-rating">
                                 <button type="button" class="like-btn">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="thumbs-up" class="svg-inline--fa fa-thumbs-up " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="display:inline-block; height:1em; width:10px ">
@@ -199,36 +199,39 @@
                                 </button>
                             </div>
                             <div class="row review">
-                                <p>Vẫn với công thức đã làm nên thành công của 5cm/s, Your Name cuốn hút khán giả ngay từ những giây phút đầu tiên bởi chất lượng hình ảnh tuyệt đẹp. Shinkai Makoto thành công dựng nên hai vùng đất khác biệt. Vùng Itomori tĩnh lặng và Tokyo nhộn nhịp sống động như thật hiện ra trên màn ảnh rạp chiếu phim. Đại cảnh được đầu tư tỉ mỉ và công phu đến khó tin. Hình ảnh được chăm chút, nét vẽ chân thật. Bạn sẽ choáng váng nếu so sánh những quang cảnh trong Your Name với hình ảnh thật ngoài đời, hầu như không sai biệt. Màu phim đẹp đến nao lòng, khi rực rỡ sắc màu, lúc trầm buồn đầy cảm xúc.</p>
+                                <p>Giúp các mọt phim còn ngồi ghế nhà trường khỏi nỗi lo cháy túi, từ 2018, Ohayou Cinema vẫn luôn tiếp sức mùa phim bằng chương trình Giá Vé U22 - Chỉ Từ 45K. Mỗi thẻ HSSV/CMND chỉ áp dụng mua 01 vé U22. Các Stars đi xem phim hãy mang thẻ sinh viên thẻ học sinh để được áp dụng nhé.</p>
+                                <img src="assets/images/favor/giaveu22-digital-1135x660_1700731582365.jpg" alt="" class = "favor-img">
+                                <p class = "review-title">Điều kiện áp dụng giá vé U22</p>
+                                <ul class="condition-list">
+                                    <li class="condition">Áp dụng khách hàng thành viên từ 22 tuổi trở xuống và cao trên 1m3</li>
+                                    <li class="condition">Không áp dụng mua online</li>
+                                    <li class="condition">Không áp dụng đồng thời với các chương trình ưu đãi khác</li>
+                                    <li class="condition">Trong mọi trường hợp, quyết định của Ohayou Cinema là quyết định cuối cùng</li>
+                                
+                                </ul>
                             </div>                        
                     </div>
                     <div class="different">
-                        <h1 class="text-right">Bình luận phim khác</h1>
+                        <h1 class="text-right">Tin liên quan</h1>
                         <div class="row list">
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
+                            <div class="col-md-4 item">
+                                <a href="favorsdetail.html" class = "full-link">
+                                    <img src="assets/images/favor/tuesday.jpg" alt="">
+                                    <p>Happy day - Vé chỉ từ 50k</p>
                                 </a>
                             </div>
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
+                            <div class="col-md-4 item">
+                                <a href="favorsdetail.html" class = "full-link">
+                                    <img src="assets/images/favor/1200x1800_1705628936074.jpg" alt="">
+                                    <p>Mưa quà tặng cho thành viên Ohayou Cinema</p>
                                 </a>
                             </div>
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
+                            <div class="col-md-4 item">
+                                <a href="favorsdetail.html" class = "full-link">
+                                    <img src="assets/images/favor/quy-dinh-do-tuoi-digital-1200x1800-1684835366729_1690277000962.jpg" alt="">
+                                    <p>Tiêu chí phân loại phim theo lứa tuổi</p>
                                 </a>
-                            </div>
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
-                                </a>
-                            </div>                           
+                            </div>                       
                         </div>
                     </div>
                 </div>
