--- a/FE_Q/user.html
+++ b/FE_Q/user.html
@@ -134,7 +134,7 @@
                             Sự Kiện
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Ưu đãi</a></li>
+                                <li><a href="favors.html">Ưu đãi</a></li>
                                 <li><a href="#">Phim hay tháng</a></li>
                             </ul>
                         </li>
