--- a/FE_Q/favors.html
+++ b/FE_Q/favors.html
@@ -7,7 +7,7 @@
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/reviewdetailstyle.css">
+    <link rel="stylesheet" href="assets/css/favorsstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -142,6 +142,7 @@
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="#">Rạp Đà Nẵng</a></li>
                             </ul>
+
                         </li>
                     </ul>
                 </div>
@@ -166,76 +167,44 @@
         <div class="content-wrapper">
             <div class="row content">
                 <div class="col-md-8 left">
-                    <div class="row actor-infor">
-                            <div class="row">
-                                <ul class="option">
-                                    <li class="ot-item">
-                                        <a href="login.html">Trang chủ</a>
-                                    </li>
-                                    <li class="ot-item">/</li>
-                                    <li class="ot-item">
-                                        <a href="director.html">Bình luận phim</a>
-                                    </li>
-                                    <li class="ot-item">/</li>
-                                    <li class="name">[Review] Your Name: Anime ăn khách nhất mọi thời đại</li>
-                                </ul>
-                            </div>
-                            <div class="row title">[Review] Your Name: Anime ăn khách nhất mọi thời đại</div>
-                            <div class="row mv-rating">
-                                <button type="button" class="like-btn">
-                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="thumbs-up" class="svg-inline--fa fa-thumbs-up " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="display:inline-block; height:1em; width:10px ">
-                                        <path fill="currentColor" d="M313.4 32.9c26 5.2 42.9 30.5 37.7 56.5l-2.3 11.4c-5.3 26.7-15.1 52.1-28.8 75.2H464c26.5 0 48 21.5 48 48c0 18.5-10.5 34.6-25.9 42.6C497 275.4 504 288.9 504 304c0 23.4-16.8 42.9-38.9 47.1c4.4 7.3 6.9 15.8 6.9 24.9c0 21.3-13.9 39.4-33.1 45.6c.7 3.3 1.1 6.8 1.1 10.4c0 26.5-21.5 48-48 48H294.5c-19 0-37.5-5.6-53.3-16.1l-38.5-25.7C176 420.4 160 390.4 160 358.3V320 272 247.1c0-29.2 13.3-56.7 36-75l7.4-5.9c26.5-21.2 44.6-51 51.2-84.2l2.3-11.4c5.2-26 30.5-42.9 56.5-37.7zM32 192H96c17.7 0 32 14.3 32 32V448c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32V224c0-17.7 14.3-32 32-32z">
-                                        </path>
-                                    </svg> Thích
-                                </button>
-                                <button type="button" class="like-btn">
-                                    Chia sẻ
-                                </button>
-                                <button class="view-btn">
-                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" style="display:inline-block; height:1em; width:10px ">
-                                        <path fill="currentColor" d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z">
-                                        </path>
-                                    </svg> 2932
-                                </button>
-                            </div>
-                            <div class="row review">
-                                <p>Vẫn với công thức đã làm nên thành công của 5cm/s, Your Name cuốn hút khán giả ngay từ những giây phút đầu tiên bởi chất lượng hình ảnh tuyệt đẹp. Shinkai Makoto thành công dựng nên hai vùng đất khác biệt. Vùng Itomori tĩnh lặng và Tokyo nhộn nhịp sống động như thật hiện ra trên màn ảnh rạp chiếu phim. Đại cảnh được đầu tư tỉ mỉ và công phu đến khó tin. Hình ảnh được chăm chút, nét vẽ chân thật. Bạn sẽ choáng váng nếu so sánh những quang cảnh trong Your Name với hình ảnh thật ngoài đời, hầu như không sai biệt. Màu phim đẹp đến nao lòng, khi rực rỡ sắc màu, lúc trầm buồn đầy cảm xúc.</p>
-                            </div>                        
-                    </div>
-                    <div class="different">
-                        <h1 class="text-right">Bình luận phim khác</h1>
-                        <div class="row list">
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
-                                </a>
-                            </div>
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
-                                </a>
-                            </div>
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
-                                </a>
-                            </div>
-                            <div class="col-md-3 item">
-                                <a href="reviewdetail.html">
-                                    <img src="assets/images/movie/24_1.png" alt="">
-                                    <p>[Review] Your Name: Anime ăn khách nhất mọi thời đại</p>
-                                </a>
-                            </div>                           
+                        <h1 class="text-right">ƯU ĐÃI</h1>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <a href="favorsdetail.html" class="text-dark-emphasis movie">
+                                <img src="assets/images/favor/giaveu22-digital-1200x1800_1700731541347.jpg" alt="" class="img-fluid img-movie" >
+                                <div class="promotion-description">
+                                    <p>Giá vé U22 - Chỉ từ 45k</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="favorsdetail.html" class="text-dark-emphasis movie">
+                                <img src="assets/images/favor/1200x1800_1705628936074.jpg" alt="" class="img-fluid img-movie">
+                                <div class="promotion-description">
+                                    Mưa quà tặng cho thành viên Ohayou Cinema
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="favorsdetail.html" class="text-dark-emphasis movie">
+                                <img src="assets/images/favor/tuesday.jpg" alt="" class="img-fluid img-movie">
+                                <div class="promotion-description">
+                                    <i> Happy day - Vé chỉ từ 50k</i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="favorsdetail.html" class="text-dark-emphasis movie">
+                                <img src="assets/images/favor/quy-dinh-do-tuoi-digital-1200x1800-1684835366729_1690277000962.jpg" alt="" class="img-fluid img-movie" >
+                                <div class="promotion-description">
+                                    Tiêu chí phân loại theo lứa tuổi
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 right">
-                    <div class="row ">
                         <h1 class="text-right">Phim đang chiếu</h1>
-                    </div>
                     <div class="row mv">
                         
                         <a href="moviedetail.html" class="text-dark-emphasis movie-name">
@@ -275,9 +244,7 @@
             </div>
         </div>
     </div>
-
-
-    
+   
     <div class="footer">
     </div>
 
