--- a/FE_Q/actor.html
+++ b/FE_Q/actor.html
@@ -434,7 +434,7 @@
     </div>
     <div class="line-default"></div>
     <div class="container   galaxy">
-        <h1 class="text">GALAXY CINEMA</h1>
+        <h1 class="text">OHAYOU CINEMA</h1>
         <P>Có những cái tên mà khi nhắc đến luôn được xem là sự bảo chứng cho doanh thu phòng vé. Ngược lại, có nhiều cá nhân mà chỉ cần nghe đến cũng phải thốt lên “ôi đúng là thuốc độc phòng vé”. Bên cạnh đó, lại có những nhân vật từng nổi đình đám, nhưng rồi suốt bao lâu chẳng còn thấy ai nhắc đến</P>
         <p>Các diễn viên điện ảnh thường được mệnh danh là “tắc kè hoa”. Lý do là bởi sự hóa thân đa dạng của họ trong từng loại vai khác nhau. Cũng là con người ấy, có thể ở phút trước còn khiến biết bao người căm phẫn, nhưng chỉ sau vài khoảnh khắc lại mang đến sự thương xót và đồng cảm ở người xem. Khán giả đôi khi cũng bàng hoàng nhận ra “bản chất thật” của người hùng trên phim chỉ bằng biểu cảm xuất sắc của người nghệ sĩ. Tất cả đem lại nhiều trạng thái cảm xúc lẫn lộn tới mức choáng ngợp. Làm thế nào lại có thể diễn một cách tài tình như vậy!</p>
         <p>Yêu thích một diễn viên nào đó, mê mệt bởi vai diễn nào đấy bấy lâu. Thế nhưng quá nhiều nguồn thông tin khiến bạn bị rối. Không sao cả, Galaxy Cinema sẽ đem đến những thông tin khái quát chuẩn xác nhất về các diễn viên nổi tiếng xuất hiện trong những thước phim hay đang công phá rạp chiếu.</p>
