--- a/FE_Q/director.html
+++ b/FE_Q/director.html
@@ -436,7 +436,7 @@
     </div>
     <div class="line-default"></div>
     <div class="container galaxy">
-        <h1 class="text">GALAXY CINEMA</h1>
+        <h1 class="text">OHAYOU CINEMA</h1>
         <P>Thích thú thể loại phim gangster, thanh toán đẫm máu giữa các băng đảng thì xin mời bước vào thế giới bọn tội phạm - du đãng do Martin Scorsese tạo nên. Đã là fan của dòng phim kinh dị, ít nhất của sẽ từng nghe qua những cái tên như Alfred Hitchcock, Sam Raimi, James Wan. Say mê những câu chuyện độc đáo, có nội dung đánh đố người xem thì Christopher Nolan hay David Fincher sẽ không làm bạn thất vọng. Hoặc với những ai tìm hiểu điện ảnh Châu Á, loạt cảnh hành động và cơn mưa đạn bay do Ngô Vũ Sâm dàn dựng tuyệt đối sẽ mê hoặc bất cứ người nào khó tính nhất.</P>
         <p>Mỗi đạo diễn luôn có một biệt tài riêng, theo đuổi triết lý riêng và áp dụng tư duy lẫn suy nghĩ của mình vào mỗi bộ phim. Từ đấy, thông qua những tác phẩm được ra mắt, họ gửi gắm vào đấy nhiều thông điệp, nhưng lý tưởng có khi gây tranh cãi hoặc cực đoan đến mức bị tẩy chay. Lại có những vị đạo diễn mà cuộc đời họ để lại biết bao di sản, nguồn cảm hứng cho thế hệ sau. Dòng chảy của điện ảnh cứ thế mà phát triển, những gì tinh hoa nhất từ người đi trước luôn được lớp trẻ thừa kế và phát triển. Tất cả đều vì mục đích làm ra những tác phẩm để đời, có ý nghĩa và giá trị trường tồn theo thời gian.</p>
         <p>Say mê với những góc máy tuyệt hảo, rùng mình bởi những câu chuyện đầy tính sáng tạo, thành công của một cuốn phim hay phần nào đến từ tài năng của người đạo diễn. Đây là nơi Galaxy Cinema tôn vinh và tri ân những vị đạo diễn tài ba, tất cả thông tin và tiểu sử của các nhà làm phim lừng danh cũng được cập nhật đầy đủ và chính xác nhất.</p>
