--- a/FE_Q/favorsdetail.html
+++ b/FE_Q/favorsdetail.html
@@ -132,7 +132,7 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="favors.html">Ưu đãi</a></li>
-                                <li><a href="#">Phim hay tháng</a></li>
+                                <li><a href="bestmovie.html">Phim hay tháng</a></li>
                             </ul>
                         </li>
 
@@ -140,7 +140,7 @@
                             Rạp/Giá vé
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Rạp Đà Nẵng</a></li>
+                                <li><a href="Ohayou.html">Rạp Đà Nẵng</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -240,7 +240,6 @@
                         <h1 class="text-right">Phim đang chiếu</h1>
                     </div>
                     <div class="row mv">
-                        
                         <a href="moviedetail.html" class="text-dark-emphasis movie-name">
                             <img src="assets/images/movie/cai-gia-cua-hanh-phuc-1_1712733174711.jpg" alt="" class="img-fluid img-movie">
                             <button class="buy-ticket-btn btn">
