--- a/FE_Q/review.html
+++ b/FE_Q/review.html
@@ -461,7 +461,7 @@
     </div>
     <div class="line-default"></div>
     <div class="container galaxy">
-        <h1 class="text">GALAXY CINEMA</h1>
+        <h1 class="text">OHAYOU CINEMA</h1>
         <P>Những khi tới rạp chiếu phim để thưởng thức các tác phẩm đang làm mưa làm gió, ít nhiều gì ở phía người xem luôn đọng lại nhiều cảm xúc và suy nghĩ. Có những phim khiến công chúng bàn tán suốt về ý nghĩa thật sự mà nó mang tới. Cũng có lúc người ta nhăn nhó bởi vì quá nhiều tình tiết phức tạp được cài cắm, bắt buộc cần có kiến thức nền về điện ảnh mới có thể thấu hiểu.</P>
         <p>Điện ảnh ngay từ những ngày đầu hình thành đã được xem là loại hình giải trí vô cùng tiềm năng. Trải nghiệm do phim ảnh mang tới là muôn vạn điều thú vị. Có lẽ vậy nên với những ai chỉ xem phim trên tinh thần “vui là chính”, thì chỉ cần đấy không phải một tác phẩm quá tệ đã đủ làm hài lòng họ. Lại có khán giả cho rằng điện ảnh là một loại hình nghệ thuật bao quát hết tất cả các hình thức nghệ thuật khác, họ xem phim để khám phá, tìm tòi tầng tầng lớp lớp ý nghĩa ẩn sâu sau những câu thoại và cảnh quay.</p>
         <p>Đắn đo khi lựa chọn phim để xem, hoặc muốn hiểu rõ hơn về các thông điệp ẩn mà đạo diễn cài cắm. Galaxy Cinema sẽ cho bạn vài gợi ý với những bài bình luận phim mới nhất, đi cùng các đánh giá kèm sự phân tích mang tính chuyên môn đối với những tác phẩm đang ra mắt tại rạp chiếu phim. Được viết bởi những cây bút có kinh nghiệm và chuyên sâu về kiến thức điện ảnh, bạn sẽ dễ dàng tìm được những bài bình luận hoặc phân tích với đa dạng thể loại từ hành động, tình cảm…, đến khoa học viễn tưởng, kinh dị.</p>
