--- a/FE_Q/payfail.html
+++ b/FE_Q/payfail.html
@@ -7,7 +7,7 @@
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/paysuccessstyle.css">
+    <link rel="stylesheet" href="assets/css/payfailstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -179,14 +179,14 @@
             <div class="block_ticket-center">
                 <div class="block">
                     <div class="text-center">
-                        <img src="assets/images/icon-rules.9c822007.png" alt="" style="width: 80px; height: 80px;">
-                        <h4>Xác nhận mua vé thành công!</h4>
-                        <p>Thông tin đặt vé của bạn sẽ được gởi qua email và tin nhắn sms theo thông tin bạn đã cung cấp trước đó. Vui lòng kiểm tra email(kể cả hộp thư rác - Spam / Junk Box) và tin nhắn.</p>
-                        <p>Trường hợp quý khách không nhận được tin nhắn, vui lòng liên hệ email
+                        <img src="assets/images/booking-fail.0c03e999.png" alt="" style="width: 80px;height: 80px;">
+                        <h4>Xuất vé thất bại!</h4>
+                        <p>Trường hợp giao dịch chưa thành công, quý khách vui lòng không thực hiện giao dịch online lần nữa và tới rạp Ohayou Cinema để mua vé.</p>
+                        <p>Việc phản hồi tới quý khách có thể bị chậm trễ, mong quý khách thông cảm và kiên nhẫn cùng nhân viên CSKH của Ohayou Cinema.</p>
+                        <p>Chúng tôi cam kết sẽ hoàn lại 100% giá trị giao dịch lỗi đã bị trừ tiền sau khi đội ngũ CSKH kiểm tra và xác nhận. Vui lòng gởi thông tin giao dịch lỗi về email
                             <a class = "mail" href="mailto:volequyen11042005@gmail.com">volequyen11042005@gmail.com</a>
-                            Ohayou Cinema mong quý khách thông cảm vì sự bất tiện này
                         </p>
-                        <a class = "back" href="guest.html" class = "align-items-center">Quay về trang chủ</a>
+                        <a href="guest.html" class = "back">Quay về trang chủ</a>
                     </div>
                 </div>  
             </div>
