--- a/FE_Q/payfail.html
+++ b/FE_Q/payfail.html
@@ -184,7 +184,7 @@
                         <p>Trường hợp giao dịch chưa thành công, quý khách vui lòng không thực hiện giao dịch online lần nữa và tới rạp Ohayou Cinema để mua vé.</p>
                         <p>Việc phản hồi tới quý khách có thể bị chậm trễ, mong quý khách thông cảm và kiên nhẫn cùng nhân viên CSKH của Ohayou Cinema.</p>
                         <p>Chúng tôi cam kết sẽ hoàn lại 100% giá trị giao dịch lỗi đã bị trừ tiền sau khi đội ngũ CSKH kiểm tra và xác nhận. Vui lòng gởi thông tin giao dịch lỗi về email
-                            <a class = "mail" href="mailto:volequyen11042005@gmail.com">volequyen11042005@gmail.com</a>
+                            <a class = "mail" href="mailto:service.ohayoucinema@gmail.com">service.ohayoucinema@gmail.com</a>
                         </p>
                         <a href="guest.html" class = "back">Quay về trang chủ</a>
                     </div>
