--- a/FE_Q/moviedetail.html
+++ b/FE_Q/moviedetail.html
@@ -198,11 +198,90 @@
                                 <div class="col-md-8"></div>
                             </div>
                             <div class="row mv-rating">
-                                <a href="" class="rating">
+                                <a href="#rating-movie" class="rating accordion-toggle" data-bs-toggle="modal" data-bs-target="#rating-movie" aria-expanded="false">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star text-primary mr-1 hover:text-primary transition duration-500 ease-in-out" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" style="width: 20px; height:20px; "><path fill=" #f29538" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg> 
                                     <span class="inline-block mr-1">9.2</span>
                                     <span class="inline-block mr-1 vote">(829 votes)</span>
                                 </a>
+                                <div class="modal modal-area" id = "rating-movie">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <img src="assets/images/movie/exhumangang.jpg" alt="" class = "movie-img">
+                                            <h1>Exhuma: Quật mộ trùng ma</h1>
+                                            <div class="circle">
+                                                <div class="text-center rate">
+                                                    <span class="mr-1">
+                                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star text-primary mr-1 hover:text-primary transition duration-500 ease-in-out" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" style="width: 20px; height:20px; "><path fill=" #f29538" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg> 
+                                                        9.2
+                                                    </span>
+                                                    <span class="mr-1 vote">(829 votes)</span>
+                                                </div>
+                                            </div>
+                                            <div class="star-rating">
+                                                <ul class = "star-list">
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col star-item">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                    <li class = "star">
+                                                        <div class="col">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 50 50" width="24" height="24" class="inline-block  star-item"><path fill="#A0A3A7" d="M15.868,28.234l-2.33,9.757c-0.094,0.391,0.057,0.8,0.38,1.038c0.324,0.237,0.757,0.26,1.104,0.054  l8.762-5.203l8.758,5.203c0.158,0.094,0.335,0.141,0.511,0.141c0.209,0,0.417-0.065,0.593-0.194c0.323-0.238,0.474-0.647,0.38-1.038  l-2.33-9.757l7.734-6.554c0.309-0.261,0.43-0.683,0.306-1.068c-0.123-0.385-0.467-0.658-0.87-0.691L28.665,19.08l-3.963-9.25  c-0.157-0.368-0.519-0.606-0.919-0.606s-0.762,0.238-0.919,0.606l-3.966,9.25L8.7,19.921c-0.403,0.033-0.747,0.306-0.87,0.691  c-0.124,0.385-0.003,0.807,0.306,1.068L15.868,28.234z M19.662,21.023c0.369-0.03,0.691-0.262,0.837-0.603l3.284-7.659l3.28,7.658  c0.146,0.341,0.468,0.573,0.837,0.603l8.394,0.692l-6.361,5.391c-0.288,0.243-0.414,0.628-0.326,0.995l1.924,8.055l-7.236-4.299  c-0.314-0.188-0.707-0.188-1.021,0l-7.24,4.3l1.924-8.056c0.088-0.367-0.038-0.752-0.326-0.995l-6.359-5.391L19.662,21.023z"></path></svg>
+                                                        </div>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="row ">
+                                                <div class="col-md-6 btn-item1">
+                                                    <button class = "close">Đóng</button>
+                                                   
+                                                </div>
+                                                <div class="col-md-6 btn-item2">
+                                                    <button class = "confirm">
+                                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pen-to-square" class="svg-inline--fa fa-pen-to-square mr-1" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style = "height: 1em;"><path fill="currentColor" d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"></path></svg>
+                                                        Xác nhận
+                                                    </button>
+                                                </div>
+                                            </div>
+                                           
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="row mv">
                                 <div class="row mv-country">
