fix bug thanh toán khi hủy, thêm cái quét mã qr mà k có được =)))

--- a/FE_Q/bestmovie.html
+++ b/FE_Q/bestmovie.html
@@ -387,7 +387,7 @@
     </div>
 
 
-    <script src="assets/js/movietypescript.js"></script>
+    <!--<script src="assets/js/movietypescript.js"></script>-->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
