sửa giao diện thống kê

--- a/Admin/dailyreport.html
+++ b/Admin/dailyreport.html
@@ -18,7 +18,7 @@
     <!-- https://fontawesome.com/ -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- https://getbootstrap.com/ -->
-    <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" href="css/dailyreport.css">
     <!--
 	Product Admin CSS Template
 	https://templatemo.com/tm-524-product-admin
@@ -132,75 +132,125 @@
                 </button>
             </div>
             <div class="list-report">
-                <div class="row history-box">
-                    <div class="col-md-2 mv-img" style="margin-top: 0;">
-                        <img src="img/exhuma.jpg" alt="">
-                    </div>
-                    <div class="col-md-5 mv-name">
-                        Exhuma: Quật mộ trùng ma
-                    </div>
-                    <div class="col-md-3 date">
-                        <p class = "theater">Rạp 1</p>
-                        <p>20:00h Thứ ba, 09/04/2024</p>
-                    </div>
-                    <div class="col-md-2 price">60.000đ</div>
-                </div>
-                <div class="row history-box">
-                    <div class="col-md-2 mv-img" style="margin-top: 0;">
-                        <img src="img/exhuma.jpg" alt="">
-                    </div>
-                    <div class="col-md-5 mv-name">
-                        Exhuma: Quật mộ trùng ma
-                    </div>
-                    <div class="col-md-3 date">
-                        <p class = "theater">Rạp 1</p>
-                        <p>20:00h Thứ ba, 09/04/2024</p>
-                    </div>
-                    <div class="col-md-2 price">60.000đ</div>
-                </div>
-                <div class="row history-box">
-                    <div class="col-md-2 mv-img" style="margin-top: 0;">
-                        <img src="img/exhuma.jpg" alt="">
-                    </div>
-                    <div class="col-md-5 mv-name">
-                        Exhuma: Quật mộ trùng ma
-                    </div>
-                    <div class="col-md-3 date">
-                        <p class = "theater">Rạp 1</p>
-                        <p>20:00h Thứ ba, 09/04/2024</p>
-                    </div>
-                    <div class="col-md-2 price">60.000đ</div>
-                </div>
-                <div class="row history-box">
-                    <div class="col-md-2 mv-img" style="margin-top: 0;">
-                        <img src="img/exhuma.jpg" alt="">
-                    </div>
-                    <div class="col-md-5 mv-name">
-                        Exhuma: Quật mộ trùng ma
-                    </div>
-                    <div class="col-md-3 date">
-                        <p class = "theater">Rạp 1</p>
-                        <p>20:00h Thứ ba, 09/04/2024</p>
-                    </div>
-                    <div class="col-md-2 price">60.000đ</div>
-                </div>
-                <div class="row history-box">
-                    <div class="col-md-2 mv-img" style="margin-top: 0;">
-                        <img src="img/exhuma.jpg" alt="">
-                    </div>
-                    <div class="col-md-5 mv-name">
-                        Exhuma: Quật mộ trùng ma
-                    </div>
-                    <div class="col-md-3 date">
-                        <p class = "theater">Rạp 1</p>
-                        <p>20:00h Thứ ba, 09/04/2024</p>
-                    </div>
-                    <div class="col-md-2 price">60.000đ</div>
-                </div>
+                <ul class="list">
+                    <li class="list-item">
+                        <div class="row history-box">
+                            <div class="col-md-2 mv-img" style="margin-top: 0;">
+                                <img src="img/exhuma.jpg" alt="">
+                            </div>
+                            <div class="col-md-5 mv-name">
+                                Exhuma: Quật mộ trùng ma
+                            </div>
+                            <div class="col-md-3 date">
+                                <p class = "theater">Rạp 1</p>
+                                <p>20:00h Thứ ba, 09/04/2024</p>
+                            </div>
+                            <div class="col-md-2 price">60.000đ</div>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="row history-box">
+                            <div class="col-md-2 mv-img" style="margin-top: 0;">
+                                <img src="img/exhuma.jpg" alt="">
+                            </div>
+                            <div class="col-md-5 mv-name">
+                                Exhuma: Quật mộ trùng ma
+                            </div>
+                            <div class="col-md-3 date">
+                                <p class = "theater">Rạp 1</p>
+                                <p>20:00h Thứ ba, 09/04/2024</p>
+                            </div>
+                            <div class="col-md-2 price">60.000đ</div>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="row history-box">
+                            <div class="col-md-2 mv-img" style="margin-top: 0;">
+                                <img src="img/exhuma.jpg" alt="">
+                            </div>
+                            <div class="col-md-5 mv-name">
+                                Exhuma: Quật mộ trùng ma
+                            </div>
+                            <div class="col-md-3 date">
+                                <p class = "theater">Rạp 1</p>
+                                <p>20:00h Thứ ba, 09/04/2024</p>
+                            </div>
+                            <div class="col-md-2 price">60.000đ</div>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="row history-box">
+                            <div class="col-md-2 mv-img" style="margin-top: 0;">
+                                <img src="img/exhuma.jpg" alt="">
+                            </div>
+                            <div class="col-md-5 mv-name">
+                                Exhuma: Quật mộ trùng ma
+                            </div>
+                            <div class="col-md-3 date">
+                                <p class = "theater">Rạp 1</p>
+                                <p>20:00h Thứ ba, 09/04/2024</p>
+                            </div>
+                            <div class="col-md-2 price">60.000đ</div>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="row history-box">
+                            <div class="col-md-2 mv-img" style="margin-top: 0;">
+                                <img src="img/exhuma.jpg" alt="">
+                            </div>
+                            <div class="col-md-5 mv-name">
+                                Exhuma: Quật mộ trùng ma
+                            </div>
+                            <div class="col-md-3 date">
+                                <p class = "theater">Rạp 1</p>
+                                <p>20:00h Thứ ba, 09/04/2024</p>
+                            </div>
+                            <div class="col-md-2 price">60.000đ</div>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="row history-box">
+                            <div class="col-md-2 mv-img" style="margin-top: 0;">
+                                <img src="img/exhuma.jpg" alt="">
+                            </div>
+                            <div class="col-md-5 mv-name">
+                                Exhuma: Quật mộ trùng ma
+                            </div>
+                            <div class="col-md-3 date">
+                                <p class = "theater">Rạp 1</p>
+                                <p>20:00h Thứ ba, 09/04/2024</p>
+                            </div>
+                            <div class="col-md-2 price">60.000đ</div>
+                        </div>
+                    </li>
+                    <li class="list-item">
+                        <div class="row history-box">
+                            <div class="col-md-2 mv-img" style="margin-top: 0;">
+                                <img src="img/exhuma.jpg" alt="">
+                            </div>
+                            <div class="col-md-5 mv-name">
+                                Exhuma: Quật mộ trùng ma
+                            </div>
+                            <div class="col-md-3 date">
+                                <p class = "theater">Rạp 1</p>
+                                <p>20:00h Thứ ba, 09/04/2024</p>
+                            </div>
+                            <div class="col-md-2 price">60.000đ</div>
+                        </div>
+                    </li>
+                </ul>
+                
+            
             </div>
             <div class="total">
-                <p class = "Label-price">Tổng doanh thu:</p>
-                <p class = "total-price">1.000.000đ</p>
+                <div class="revenue">
+                    <span class="Label-price">Tổng vé:</span>
+                    <span class="total-count">1000</span>
+                </div>
+                <div class="revenue">
+                    <span class = "Label-price">Tổng doanh thu:</span>
+                    <span class = "total-count">1.000.000đ</span>
+                </div>
             </div>
         </div>
 
