--- a/Admin/index.html
+++ b/Admin/index.html
@@ -89,6 +89,7 @@
                 </div>
             </div>
         </div>
+        <div class="line-default"></div>
         <div class="container">
             <div class="row">
                 <div class="col">
