Thêm trang staff với quét mã qr (mà thấy xà lơ quá)

--- a/Admin/dailyreport.html
+++ b/Admin/dailyreport.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Product Page - Admin HTML Template</title>
+    <link rel="icon" href="img/cinema-logo.png" type="image/png">
+    <title>Admin</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
@@ -29,12 +30,12 @@
         <div class="container-fluid  p-4">
             <div class="row align-items-center">
                 <div class="col-md-1"></div>
-                <div class="col-md-2 px-5 py-1">
+                <div class="col-md-2 py-1">
                     <a href="" class = "navbar-brand">
                         <img src="img/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <ul class="list-gr-1 list-group list-group-horizontal">
                         <li class="list-group-item movie-area">
                             <a href="index.html">
@@ -53,6 +54,10 @@
                             <a href="">
                                 Quản lí rạp chiếu
                                 <i class="ti-angle-down down-btn"></i>
+                                <ul class="sub-list-gr-1 list-group">
+                                    <li><a href="movietype.html">Phim</a></li>
+                                    <li><a href="actor.html">Suất chiếu</a></li>
+                                </ul>
                             </a>                             
                         </li>   
                         <li class="list-group-item movie-area">
@@ -67,15 +72,22 @@
                                 <i class="ti-angle-down down-btn"></i>
                             </a>                             
                         </li>
+                        <li class="list-group-item movie-area">
+                            <a href="">
+                                Quản lí tài khoản
+                                <i class="ti-angle-down down-btn"></i>
+                                <ul class="sub-list-gr-1 list-group">
+                                    <li><a href="movietype.html">Nhân viên</a></li>
+                                    <li><a href="actor.html">Khách hàng</a></li>
+                                </ul>
+                            </a>                             
+                        </li>   
                     </ul>
                 </div>
-              
-                <div class="col-md-1">
+                <div class="login-area col-md-2">
                     <button class="search-btn btn">
                         <i class="search-icon ti-search"></i>
                     </button>
-                </div>
-                <div class="login-area col-md-2">
                         <div class="account-wrapper">
                             <img src="img/account.png" alt="" class="img-fluid account-img">
                             <ul class="list-group account-list">
