--- a/Staff/staff.html
+++ b/Staff/staff.html
@@ -84,9 +84,20 @@
                 <button class="report-btn">
                     Tìm kiếm
                 </button>
-                <button class="report-btn">
-                    <a href="qrcode.html">Quét mã QR</a>
+                <button class="report-btn accordion-toggle " data-bs-toggle="modal" data-bs-target="#qr-scan" aria-expanded="false">Quét mã QR
                 </button>
+                <div class="modal" id = "qr-scan">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div id="qr-result">
+                                <h1 class = "scan-title">Scan QR</h1>
+                                <div style="display: flex; justify-content: center;">
+                                    <div id="qr-reader" style="width: 500px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="list-report">
                 <ul class="list">
@@ -222,6 +233,35 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
+    <script>
+        function domReady(fn) {
+            if (document.readyState === "complete" || document.readyState === "interactive") {
+                setTimeout(fn, 1);
+            } else {
+                document.addEventListener("DOMContentLoaded", fn);
+            }
+        }
+
+        domReady(function() {
+            var myqr = document.getElementById('qr-result');
+            var lastResult, countResults = 0;
+
+            function onScanSuccess(decodeText, decodeResult) {
+                if (decodeText !== lastResult) {
+                    ++countResults;
+                    lastResult = decodeText;
+
+                    alert("Your QR is: " + decodeText);
+                    myqr.innerHTML = `You scanned ${countResults} : ${decodeText}`;
+                }
+            }
+
+            var html5QrcodeScanner = new Html5QrcodeScanner(
+                "qr-reader", { fps: 10, qrbox: 250 }
+            );
+            html5QrcodeScanner.render(onScanSuccess);
+        });
+    </script>
 
 
 
