Xong cái Staff quét mã qr để Check In

--- a/Staff/staff.html
+++ b/Staff/staff.html
@@ -118,7 +118,6 @@
                             <div class="col-md-2 check-btn">
                                 <button class = "check-in">Check in</button>
                             </div>
-
                         </div>
                     </li>
                     <li class="list-item">
@@ -262,8 +261,5 @@
             html5QrcodeScanner.render(onScanSuccess);
         });
     </script>
-
-
-
-
 </body>
+</html>
