--- a/Staff/staffProfile.html
+++ b/Staff/staffProfile.html
@@ -33,9 +33,9 @@
                         <img src="img/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-md-7"></div>
+                <div class="col-md-6"></div>
     
-                <div class="login-area col-md-2">
+                <div class="login-area col-md-3">
                     <button class="search-btn btn">
                         <i class="search-icon ti-search"></i>
                     </button>
@@ -63,7 +63,7 @@
            <div class="col-md-8 infor">
                 <h2>Thông tin cá nhân</h2>
                 <div class="row user-infor-box">
-                    <div class="col-md-5 box-left">
+                    <div class="col-md-6 box-left">
                         <div class="form-group">
                             <label for="name">Name</label>
                         <div class="form remove">
@@ -80,7 +80,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-md-5 box-right">
+                    <div class="col-md-6 box-right">
                         <div class="form-group">
                             <label for="date">Date of birth</label>
                             <div class="form remove">
@@ -95,8 +95,8 @@
                                 <input type="text" required placeholder="12345678">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <button class="update accordion-toggle " data-bs-toggle="modal" data-bs-target="#update" aria-expanded="false">Thay đổi</button>
+                        <div class="form-group" style="justify-content: end; display: flex">
+                            <button class="update accordion-toggle "  data-bs-toggle="modal" data-bs-target="#update" aria-expanded="false">Thay đổi</button>
                         </div>
                         <div class="modal" id = "update">
                             <div class="modal-dialog">
