thêm trang chủ, adminprofile

--- a/Admin/staffManagement.html
+++ b/Admin/staffManagement.html
@@ -36,14 +36,8 @@
                 <div class="col-md-7">
                     <ul class="list-gr-1 list-group list-group-horizontal">
                         <li class="list-group-item movie-area">
-                            <a href="index.html">
+                            <a href="homepage.html">
                                 Trang chủ
-                                <i class="ti-angle-down down-btn"></i>
-                            </a>                             
-                        </li>
-                        <li class="list-group-item movie-area">
-                            <a href="">
-                                Đơn hàng
                                 <i class="ti-angle-down down-btn"></i>
                             </a>                             
                         </li>
@@ -53,23 +47,18 @@
                                 Quản lí rạp chiếu
                                 <i class="ti-angle-down down-btn"></i>
                                 <ul class="sub-list-gr-1 list-group">
-                                    <li><a href="">Phim</a></li>
+                                    <li><a href="movie.html">Phim</a></li>
                                     <li><a href="">Suất chiếu</a></li>
                                 </ul>
                             </a>                             
                         </li>   
                         <li class="list-group-item movie-area">
                             <a href="dailyreport.html">
-                                Thống kê
+                                Doanh thu
                                 <i class="ti-angle-down down-btn"></i>
                             </a>  
                         </li>
-                        <li class="list-group-item movie-area">
-                            <a href="">
-                                Rạp/Giá vé
-                                <i class="ti-angle-down down-btn"></i>
-                            </a>                             
-                        </li>
+                       
                         <li class="list-group-item movie-area">
                             <a href="">
                                 Quản lí tài khoản
