--- a/Admin/movie.html
+++ b/Admin/movie.html
@@ -80,7 +80,7 @@
                     <div class="account-wrapper">
                         <img src="img/account.png" alt="" class="img-fluid account-img">
                         <ul class="list-group account-list">
-                            <li class="list-group-item"><a href="account.html"><i class="fa-solid fa-id-badge account-icon"></i>
+                            <li class="list-group-item"><a href="adminprofile.html"><i class="fa-solid fa-id-badge account-icon"></i>
                                 Tài Khoản</a></li>
                             <li class="list-group-item"><a href="" class="js-logout"><i class="fa-solid fa-arrow-right-from-bracket account-icon"></i>
                                 Đăng Xuất</a></li>
